# b02dd

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindBoost.cmake
config/Comparisons/: BDTComparison.cfg  DecayTimeSignificance.cfg  EtaComparison.cfg  Sim09Comparison.cfg  SimComparison.cfg  compare.cfg
config/Fitter/: AllConfig.cfg  CharmlessBackgroundConfig.cfg  DDstMCMassFitConfig.cfg  DDweightsMassFitConfig.cfg  DMassFitConfig.cfg  DsDMCMassFitConfig.cfg  FitConfig.cfg  MCFitConfig.cfg  MCMassFitConfig.cfg  MassFitConfig.cfg  ResolutionConfig.cfg  SplineKnots.cfg
config/FlavourTagging/: Correlations.cfg  TaggingPower.cfg
config/Optimization/: BDT_Optimization_Config.cfg  BDT_Optimization_KKpi_Config.cfg  BDT_Optimization_Kpipi_Config.cfg  FOM_Config.cfg  MCDataBDTComparison.cfg  PID_Optimization_KaonTwo_KKpi_Config.cfg  PID_Optimization_Kaon_KKpi_Config.cfg  PID_Optimization_Kaon_Kpipi_Config.cfg  PID_Optimization_PiOne_Kpipi_Config.cfg  PID_Optimization_PiTwo_Kpipi_Config.cfg  PID_Optimization_PionOne_KKpi_Config.cfg  PID_Optimization_PionSingle_KKpi_Config.cfg  PID_Optimization_PionTwo_KKpi_Config.cfg
config/Reducer/: CombinedSelection.cfg  DecayTimeSignificanceStudy.cfg  Efficiencies.cfg  FinalSelection.cfg  FlattenTuple.cfg  MassVetos.cfg  PIDRenaming.cfg  PlotVetos.cfg  PreSelection.cfg  PrepareDataForBDTTraining.cfg  PrepareMCForBDTTraining.cfg  TMVAGrimReaper.cfg  TMVAGrimReaper_2011.cfg  TMVAGrimReaper_20112012.cfg  TMVAGrimReaper_20112012_KKpi.cfg  TMVAGrimReaper_20112012_Kpipi.cfg  TMVAGrimReaper_20112012_Kpipi_Calib.cfg  TMVAGrimReaper_2012.cfg  TMVAGrimReaper_BDT1.cfg  TMVAGrimReaper_BDT2.cfg  TMVAGrimReaper_BDT3.cfg  TMVAGrimReaper_BDT4.cfg  TMVAGrimReaper_Dminus.cfg  TMVAGrimReaper_Dplus.cfg  TMVAGrimReaper_DsD_ProbNN.cfg  TMVAGrimReaper_DsD_ProbNN_ratio.cfg  TMVAGrimReaper_MC_20112012_KKpi.cfg  TMVAGrimReaper_MC_20112012_Kpipi.cfg  TMVAGrimReaper_MC_20112012_Kpipi_Calib.cfg  TMVAGrimReaper_MC_20112012_P8_BDT.cfg  TMVAGrimReaper_MC_2011_P8_BDT.cfg  TMVAGrimReaper_MC_2012_P6_BDT.cfg  TMVAGrimReaper_MC_2012_P6_BDT1.cfg  TMVAGrimReaper_MC_2012_P6_BDT2.cfg  TMVAGrimReaper_MC_2012_P6_BDT3.cfg  TMVAGrimReaper_MC_2012_P6_BDT4.cfg  TMVAGrimReaper_MC_2012_P8_BDT.cfg  TMVAGrimReaper_MC_2012_P8_BDT1.cfg  TMVAGrimReaper_MC_2012_P8_BDT2.cfg  TMVAGrimReaper_MC_2012_P8_BDT3.cfg  (+9 more)
config/RunScripts/: Scythe_B02DDWS_2011.sh  Scythe_B02DDWS_2012.sh  Scythe_B02DD_2011.sh  Scythe_B02DD_2012.sh  Scythe_MC_B02DD_Sim08_2011_Pythia6.sh  Scythe_MC_B02DD_Sim08_2011_Pythia8.sh  Scythe_MC_B02DD_Sim08_2011_Pythia8_nofhgfs.sh  Scythe_MC_B02DD_Sim08_2012_Pythia6.sh  Scythe_MC_B02DD_Sim08_2012_Pythia8.sh  Scythe_MC_B02DD_Sim08_2012_Pythia8_nofhgfs.sh  Scythe_MC_B02DsD_Sim08_2012_Pythia8.sh  Scythe_MC_B02DsDst_Sim08_2012_Pythia8.sh  Scythe_MC_B02DstD_Sim08_2012_Pythia8.sh
config/StartingValues/: Acceptancespline.txt  StartingValues_Acceptance_Splines.txt  StartingValues_Acceptance_Splines_fixed.txt  StartingValues_BDT_Optimization.txt  StartingValues_BDT_Optimization_wYields.txt  StartingValues_Bs2DsDMass.txt  StartingValues_CharmlessBackground.txt  StartingValues_DDweightsMass.txt  StartingValues_Eta.txt  StartingValues_KKpi_BDT_Optimization.txt  StartingValues_KKpi_BDT_Optimization_wYields.txt  StartingValues_Kpipi_BDT_Optimization.txt  StartingValues_Kpipi_BDT_Optimization_wYields.txt  StartingValues_MC.txt  StartingValues_MC_Mass.txt  StartingValues_Mass.txt  StartingValues_PionPIDOptimization.txt  StartingValues_Time.txt
config/TMVA/: TMVA_Classification.cfg  TMVA_Classification_Dminus.cfg  TMVA_Classification_Dplus.cfg  TMVA_Classification_DsD.cfg  TMVA_Classification_KKpi.cfg  TMVA_Classification_Kpipi.cfg  TMVA_Comparison_KKpi.cfg  TMVA_Comparison_Kpipi.cfg
config/TMVA/Weights/: tmva_BDTG_MaxDepth2.class.C  tmva_BDTG_MaxDepth2.weights.xml  tmva_BDTG_MaxDepth3.class.C  tmva_BDTG_MaxDepth3.weights.xml  (+4 more)
config/ToyMC/: B02DD_dirtyconfig.info
macros/: CharmlessSyst.C  DeltaPhi.cpp  FitterValidation.C  Sint.cpp
main/: B02DDMCFit.cpp  B02DsDMCFit.cpp  BDT_cut_optimization.cpp  CMakeLists.txt  CPfitDataTest.cpp  Correlations.cpp  DMassFit.cpp  DecayTimeAcceptanceKnots.cpp  DecayTimeResolutionPsi2S_MC.cpp  DecayTimeResolution_MC.cpp  Efficiencies.cpp  FOM.cpp  FOM_DstD.cpp  FitterValidation.cpp  MCBootstrapping.cpp  MCDataBDTComparison.cpp  MassFit_DDweights.cpp  PID_cut_optimization.cpp  Sim09Comparisons.cpp  SweightCalculation.cpp  TaggingPower.cpp  VetoCuts.cpp  WSDMassFit.cpp  WSMassFit.cpp  sin2betaFitter.cpp  sin2betaFitter_MC.cpp  sin2betaFitter_bootstrapping.cpp  sin2betaFitter_bootstrapping_with_mass.cpp  sin2betaFitter_sFit.cpp
main/GrimReaper/: B02DDFlavourTaggingCombinationGrimReaper.cpp  B02DDFlavourTaggingGrimReaper.cpp  B02DDPIDReweightingGrimReaper.cpp  B02DDVariablesGrimReaper.cpp  B02DDWSVariablesGrimReaper.cpp  CMakeLists.txt  FTSystematicsReducer.cpp  InvertBDTGrimReaper.cpp  RemoveDsDConstrainBranchesGrimReaper.cpp
main/MassFits/: B02DDMCFit.cpp  B02DDstMCMassFit.cpp  B02DsDMCMassFit.cpp  B0DDMassFit.cpp  Bs2DsDMCMassFit.cpp  CMakeLists.txt  CharmlessBackground.cpp  DMassFit.cpp  DsDMassFit.cpp  MassFit.cpp  MassFit_DDweights.cpp  WSDMassFit.cpp  WSMassFit.cpp
main/Reducer/: CMakeLists.txt  SummingSweights.cpp
main/SystematicStudies/: CMakeLists.txt  Constraints.cpp  CorrelationEtaTime.cpp  CorrelationEtaTime_test.cpp  CorrelationMassTime.cpp  DecayTimeAcceptance.cpp  DecayTimeFitValidation.cpp  DecayTimeResolution.cpp  DeltaGammad.cpp  DeltaMd.cpp  FlavourTaggingCalibration.cpp  MassModel.cpp  MistagTimeCorrelation.cpp  ProductionAsymmetry.cpp  zscale.cpp
python/: prodasymcalc.py
scripts/: PIDGen.py  PIDreweighting_MD11.sh  PIDreweighting_MD12.sh  PIDreweighting_MU11.sh  PIDreweighting_MU12.sh  compare.py  comparisonplots.py  rebuild_cmake.sh  style.py
scripts/DiscoveryPaper/: Makefile  b2dd.C  b2dd.h  derived.cpp  derived.h  official.C
src/: CMakeLists.txt
src/CPFitter/: CMakeLists.txt  CPFitter.cpp  CPFitter.h
src/DecRateCoeff/: CMakeLists.txt  DecRateCoeff_Bd.cxx  DecRateCoeff_Bd.h  DecRateCoeff_Bd_LinkDef.h
(+4 files in other folders)
