add_subdirectory(GrimReaper)
add_subdirectory(MassFits)
add_subdirectory(SystematicStudies)

# Executables
add_executable(PID_cut_optimization PID_cut_optimization.cpp)
add_executable(BDT_cut_optimization BDT_cut_optimization.cpp)
add_executable(TaggingPower TaggingPower.cpp)
add_executable(sin2betaFitter_MC sin2betaFitter_MC.cpp)
add_executable(DecayTimeResolution_MC DecayTimeResolution_MC.cpp)
add_executable(sin2betaFitter sin2betaFitter.cpp)
add_executable(MCDataBDTComparison MCDataBDTComparison.cpp)
add_executable(Correlations Correlations.cpp)
add_executable(FitterValidation FitterValidation.cpp)
add_executable(Sim09Comparisons Sim09Comparisons.cpp)
add_executable(Efficiencies Efficiencies.cpp)
add_executable(VetoCuts VetoCuts.cpp)
add_executable(DecayTimeAcceptanceKnots DecayTimeAcceptanceKnots.cpp)
add_executable(MCBootstrapping MCBootstrapping.cpp)
add_executable(FOM FOM.cpp)

# Aliases for module libs

# Linker information
target_link_libraries(PID_cut_optimization ${ALL_LIBRARIES})
target_link_libraries(BDT_cut_optimization ${ALL_LIBRARIES})
target_link_libraries(TaggingPower ${ALL_LIBRARIES})
target_link_libraries(sin2betaFitter_MC ${ALL_LIBRARIES})
target_link_libraries(DecayTimeResolution_MC ${ALL_LIBRARIES})
target_link_libraries(sin2betaFitter ${ALL_LIBRARIES})
target_link_libraries(MCDataBDTComparison ${ALL_LIBRARIES})
target_link_libraries(Correlations ${ALL_LIBRARIES})
target_link_libraries(FitterValidation ${ALL_LIBRARIES})
target_link_libraries(Sim09Comparisons ${ALL_LIBRARIES})
target_link_libraries(Efficiencies ${ALL_LIBRARIES})
target_link_libraries(VetoCuts ${ALL_LIBRARIES})
target_link_libraries(DecayTimeAcceptanceKnots ${ALL_LIBRARIES})
target_link_libraries(MCBootstrapping ${ALL_LIBRARIES})
target_link_libraries(FOM ${ALL_LIBRARIES})