# Executables
add_executable(B02DDVariablesGrimReaper B02DDVariablesGrimReaper.cpp)
add_executable(B02DDWSVariablesGrimReaper B02DDWSVariablesGrimReaper.cpp)
add_executable(B02DDFlavourTaggingGrimReaper B02DDFlavourTaggingGrimReaper.cpp)
add_executable(FTSystematicsReducer FTSystematicsReducer.cpp)
add_executable(RemoveDsDConstrainBranchesGrimReaper RemoveDsDConstrainBranchesGrimReaper.cpp)

# Linker information
target_link_libraries(B02DDVariablesGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(B02DDWSVariablesGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(B02DDFlavourTaggingGrimReaper dsReducer ${ALL_LIBRARIES})
target_link_libraries(FTSystematicsReducer dsReducer ${ALL_LIBRARIES})
target_link_libraries(RemoveDsDConstrainBranchesGrimReaper dsReducer ${ALL_LIBRARIES})

install(TARGETS B02DDVariablesGrimReaper DESTINATION bin)
install(TARGETS B02DDWSVariablesGrimReaper DESTINATION bin)
install(TARGETS B02DDFlavourTaggingGrimReaper DESTINATION bin)
install(TARGETS RemoveDsDConstrainBranchesGrimReaper DESTINATION bin)